IgrisParser.py
# Generated from Igris.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class IgrisParser ( Parser ):

    grammarFileName = "Igris.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'=>'", "'ver'", "','", "'si'", "'('", 
                     "')'", "'sino'", "'mientras'", "'cargar'", "'col'", 
                     "'regresion'", "'predecir'", "'perceptron'", "'kmeans'", 
                     "'mat_suma'", "'mat_resta'", "'mat_mult'", "'mat_trans'", 
                     "'mat_inv'", "'puntos'", "'linea'", "'graficar'", "'{'", 
                     "'}'", "'raiz'", "'seno'", "'^'", "'*'", "'/'", "'%'", 
                     "'+'", "'-'", "'<'", "'>'", "'>='", "'<='", "'=='", 
                     "'!='", "'&&'", "'||'", "'verdadero'", "'falso'", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "ID", "NUMBER", "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_bloque = 2
    RULE_printItem = 3
    RULE_expression = 4
    RULE_atom = 5
    RULE_exprList = 6

    ruleNames =  [ "program", "statement", "bloque", "printItem", "expression", 
                   "atom", "exprList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    ID=45
    NUMBER=46
    STRING=47
    WS=48
    COMMENT=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(IgrisParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.StatementContext)
            else:
                return self.getTypedRuleContext(IgrisParser.StatementContext,i)


        def getRuleIndex(self):
            return IgrisParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = IgrisParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 14
                self.statement()
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 120946388107060) != 0)):
                    break

            self.state = 19
            self.match(IgrisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return IgrisParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class GraficarStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGraficarStmt" ):
                listener.enterGraficarStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGraficarStmt" ):
                listener.exitGraficarStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraficarStmt" ):
                return visitor.visitGraficarStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(IgrisParser.ExpressionContext,0)

        def bloque(self):
            return self.getTypedRuleContext(IgrisParser.BloqueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class ColStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColStmt" ):
                listener.enterColStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColStmt" ):
                listener.exitColStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColStmt" ):
                return visitor.visitColStmt(self)
            else:
                return visitor.visitChildren(self)


    class MatRestaStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatRestaStmt" ):
                listener.enterMatRestaStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatRestaStmt" ):
                listener.exitMatRestaStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatRestaStmt" ):
                return visitor.visitMatRestaStmt(self)
            else:
                return visitor.visitChildren(self)


    class MatInvStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(IgrisParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatInvStmt" ):
                listener.enterMatInvStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatInvStmt" ):
                listener.exitMatInvStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatInvStmt" ):
                return visitor.visitMatInvStmt(self)
            else:
                return visitor.visitChildren(self)


    class MatMultStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatMultStmt" ):
                listener.enterMatMultStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatMultStmt" ):
                listener.exitMatMultStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatMultStmt" ):
                return visitor.visitMatMultStmt(self)
            else:
                return visitor.visitChildren(self)


    class AssignStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(IgrisParser.ID, 0)
        def expression(self):
            return self.getTypedRuleContext(IgrisParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)


    class PerceptronStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPerceptronStmt" ):
                listener.enterPerceptronStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPerceptronStmt" ):
                listener.exitPerceptronStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPerceptronStmt" ):
                return visitor.visitPerceptronStmt(self)
            else:
                return visitor.visitChildren(self)


    class MatTransStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(IgrisParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatTransStmt" ):
                listener.enterMatTransStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatTransStmt" ):
                listener.exitMatTransStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatTransStmt" ):
                return visitor.visitMatTransStmt(self)
            else:
                return visitor.visitChildren(self)


    class LineaStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(IgrisParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineaStmt" ):
                listener.enterLineaStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineaStmt" ):
                listener.exitLineaStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLineaStmt" ):
                return visitor.visitLineaStmt(self)
            else:
                return visitor.visitChildren(self)


    class LoadStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(IgrisParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoadStmt" ):
                listener.enterLoadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoadStmt" ):
                listener.exitLoadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoadStmt" ):
                return visitor.visitLoadStmt(self)
            else:
                return visitor.visitChildren(self)


    class PredecirStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredecirStmt" ):
                listener.enterPredecirStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredecirStmt" ):
                listener.exitPredecirStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredecirStmt" ):
                return visitor.visitPredecirStmt(self)
            else:
                return visitor.visitChildren(self)


    class PrintStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.PrintItemContext)
            else:
                return self.getTypedRuleContext(IgrisParser.PrintItemContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)


    class MatSumaStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMatSumaStmt" ):
                listener.enterMatSumaStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMatSumaStmt" ):
                listener.exitMatSumaStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMatSumaStmt" ):
                return visitor.visitMatSumaStmt(self)
            else:
                return visitor.visitChildren(self)


    class KmeansStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterKmeansStmt" ):
                listener.enterKmeansStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitKmeansStmt" ):
                listener.exitKmeansStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKmeansStmt" ):
                return visitor.visitKmeansStmt(self)
            else:
                return visitor.visitChildren(self)


    class ExprStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(IgrisParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(IgrisParser.ExpressionContext,0)

        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.BloqueContext)
            else:
                return self.getTypedRuleContext(IgrisParser.BloqueContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class PuntosStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)

        def STRING(self):
            return self.getToken(IgrisParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPuntosStmt" ):
                listener.enterPuntosStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPuntosStmt" ):
                listener.exitPuntosStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPuntosStmt" ):
                return visitor.visitPuntosStmt(self)
            else:
                return visitor.visitChildren(self)


    class RegresionStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a IgrisParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(IgrisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(IgrisParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegresionStmt" ):
                listener.enterRegresionStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegresionStmt" ):
                listener.exitRegresionStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRegresionStmt" ):
                return visitor.visitRegresionStmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = IgrisParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = IgrisParser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 21
                self.match(IgrisParser.ID)
                self.state = 22
                self.match(IgrisParser.T__0)
                self.state = 23
                self.expression(0)
                pass

            elif la_ == 2:
                localctx = IgrisParser.PrintStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 24
                self.match(IgrisParser.T__1)
                self.state = 25
                self.printItem()
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 26
                    self.match(IgrisParser.T__2)
                    self.state = 27
                    self.printItem()
                    self.state = 32
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 3:
                localctx = IgrisParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 33
                self.match(IgrisParser.T__3)
                self.state = 34
                self.match(IgrisParser.T__4)
                self.state = 35
                self.expression(0)
                self.state = 36
                self.match(IgrisParser.T__5)
                self.state = 37
                self.bloque()
                self.state = 40
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==7:
                    self.state = 38
                    self.match(IgrisParser.T__6)
                    self.state = 39
                    self.bloque()


                pass

            elif la_ == 4:
                localctx = IgrisParser.WhileStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.match(IgrisParser.T__7)
                self.state = 43
                self.match(IgrisParser.T__4)
                self.state = 44
                self.expression(0)
                self.state = 45
                self.match(IgrisParser.T__5)
                self.state = 46
                self.bloque()
                pass

            elif la_ == 5:
                localctx = IgrisParser.LoadStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.match(IgrisParser.T__8)
                self.state = 49
                self.match(IgrisParser.T__4)
                self.state = 50
                self.match(IgrisParser.STRING)
                self.state = 51
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 6:
                localctx = IgrisParser.ColStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 52
                self.match(IgrisParser.T__9)
                self.state = 53
                self.match(IgrisParser.T__4)
                self.state = 54
                self.expression(0)
                self.state = 55
                self.match(IgrisParser.T__2)
                self.state = 56
                self.expression(0)
                self.state = 57
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 7:
                localctx = IgrisParser.RegresionStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 59
                self.match(IgrisParser.T__10)
                self.state = 60
                self.match(IgrisParser.T__4)
                self.state = 61
                self.expression(0)
                self.state = 62
                self.match(IgrisParser.T__2)
                self.state = 63
                self.expression(0)
                self.state = 64
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 8:
                localctx = IgrisParser.PredecirStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 66
                self.match(IgrisParser.T__11)
                self.state = 67
                self.match(IgrisParser.T__4)
                self.state = 68
                self.expression(0)
                self.state = 69
                self.match(IgrisParser.T__2)
                self.state = 70
                self.expression(0)
                self.state = 71
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 9:
                localctx = IgrisParser.PerceptronStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 73
                self.match(IgrisParser.T__12)
                self.state = 74
                self.match(IgrisParser.T__4)
                self.state = 75
                self.expression(0)
                self.state = 76
                self.match(IgrisParser.T__2)
                self.state = 77
                self.expression(0)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 78
                    self.match(IgrisParser.T__2)
                    self.state = 79
                    self.expression(0)


                self.state = 82
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 10:
                localctx = IgrisParser.KmeansStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 84
                self.match(IgrisParser.T__13)
                self.state = 85
                self.match(IgrisParser.T__4)
                self.state = 86
                self.expression(0)
                self.state = 87
                self.match(IgrisParser.T__2)
                self.state = 88
                self.expression(0)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 89
                    self.match(IgrisParser.T__2)
                    self.state = 90
                    self.expression(0)


                self.state = 93
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 11:
                localctx = IgrisParser.MatSumaStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 95
                self.match(IgrisParser.T__14)
                self.state = 96
                self.match(IgrisParser.T__4)
                self.state = 97
                self.expression(0)
                self.state = 98
                self.match(IgrisParser.T__2)
                self.state = 99
                self.expression(0)
                self.state = 100
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 12:
                localctx = IgrisParser.MatRestaStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 102
                self.match(IgrisParser.T__15)
                self.state = 103
                self.match(IgrisParser.T__4)
                self.state = 104
                self.expression(0)
                self.state = 105
                self.match(IgrisParser.T__2)
                self.state = 106
                self.expression(0)
                self.state = 107
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 13:
                localctx = IgrisParser.MatMultStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 109
                self.match(IgrisParser.T__16)
                self.state = 110
                self.match(IgrisParser.T__4)
                self.state = 111
                self.expression(0)
                self.state = 112
                self.match(IgrisParser.T__2)
                self.state = 113
                self.expression(0)
                self.state = 114
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 14:
                localctx = IgrisParser.MatTransStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 116
                self.match(IgrisParser.T__17)
                self.state = 117
                self.match(IgrisParser.T__4)
                self.state = 118
                self.expression(0)
                self.state = 119
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 15:
                localctx = IgrisParser.MatInvStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 121
                self.match(IgrisParser.T__18)
                self.state = 122
                self.match(IgrisParser.T__4)
                self.state = 123
                self.expression(0)
                self.state = 124
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 16:
                localctx = IgrisParser.PuntosStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 16)
                self.state = 126
                self.match(IgrisParser.T__19)
                self.state = 127
                self.match(IgrisParser.T__4)
                self.state = 128
                self.expression(0)
                self.state = 129
                self.match(IgrisParser.T__2)
                self.state = 130
                self.expression(0)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==3:
                    self.state = 131
                    self.match(IgrisParser.T__2)
                    self.state = 132
                    self.match(IgrisParser.STRING)


                self.state = 135
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 17:
                localctx = IgrisParser.LineaStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 17)
                self.state = 137
                self.match(IgrisParser.T__20)
                self.state = 138
                self.match(IgrisParser.T__4)
                self.state = 139
                self.expression(0)
                self.state = 140
                self.match(IgrisParser.T__5)
                pass

            elif la_ == 18:
                localctx = IgrisParser.GraficarStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 18)
                self.state = 142
                self.match(IgrisParser.T__21)
                self.state = 143
                self.match(IgrisParser.T__4)
                self.state = 144
                self.match(IgrisParser.T__5)
                pass
